New components and mock

--- a/src/app/admission/search-user/search-user.component.html
+++ b/src/app/admission/search-user/search-user.component.html
@@ -1,1 +1,10 @@
-<app-button></app-button>
+<!-- <app-button
+    title="Consultar por CPF"
+    styles="primary"
+></app-button> -->
+
+<app-card>
+
+</app-card>
+
+
