--- a/src/app/admission/search-user/search-user.component.html
+++ b/src/app/admission/search-user/search-user.component.html
@@ -1,10 +1,22 @@
+<section class="content">
+    <h1>Informe o CPF do futuro cooperado (a)</h1>
+    <p>Se necessário, você poderá duplicar uma conta existente ou pausar e retornar esse cadastro futuramente.</p>
+    <p>Digite apenas os números (sem pontos ou traços).</p>
+
+    <form action="">
+        <label for="cpf">CPF</label>
+        <input type="text" name="" id="" placeholder="000.000.000-00">
+    </form>
+</section>
+
+
 <!-- <app-button
     title="Consultar por CPF"
     styles="primary"
-></app-button> -->
+></app-button>
 
 <app-card>
 
-</app-card>
+</app-card> -->
 
 
