--- a/src/app/shared/template/header/header.component.html
+++ b/src/app/shared/template/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<mat-toolbar class="header mat-elevation-z1">
+    <section class="left">
+        <h1>NOVA ADMISSÃO DE COOPERADO</h1>
+        <p>Cadastro / Admissão do Cooperado / Nova Admissão de Cooperado</p>
+    </section>
+
+    <section class="right">
+        
+    </section>
+</mat-toolbar>
