--- a/src/app/shared/template/sidenav/sidenav.component.html
+++ b/src/app/shared/template/sidenav/sidenav.component.html
@@ -1,25 +1,18 @@
-<mat-sidenav-container class="container">
-    <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true">
-        <mat-nav-list class="nav-list">
-            <a mat-list-item routerLink="">
-                <i class="material-icons-outlined"> menu </i>
-                <!-- <span class="material-icons-outlined">menu</span> -->
-            </a>
-            <a mat-list-item routerLink="products">
-                <i class="material-icons"> storefront </i>
-            </a>
-            <a mat-list-item routerLink="products">
-                <i class="material-icons"> storefront </i>
-            </a>
-            <a mat-list-item routerLink="products">
-                <i class="material-icons"> storefront </i>
-            </a>
-            <a mat-list-item routerLink="products">
-                <i class="material-icons"> storefront </i>
-            </a>
-        </mat-nav-list>
-    </mat-sidenav>
+<aside class="container">
+    <section class="menu">
+        <img class="logo" src="" alt="">
+        <ul>
+            <li><i class="bi bi-list"></i></li>
+            <li><i class="bi bi-search"></i></li>
+            <li><i class="bi bi-star"></i></li>
+            <li><i class="bi bi-chat-left-dots"></i></li>
+            <li><i class="bi bi-sliders"></i></li>
+            <li><i class="bi bi-bank"></i></li>
+        </ul>
+    </section>
 
-    <mat-sidenav-content class="content">
-    </mat-sidenav-content>
-</mat-sidenav-container>
+    <section class="content">
+        <app-header></app-header>
+        <router-outlet></router-outlet>
+    </section>
+</aside>
