--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -5,6 +5,7 @@ button {
     &.primary {
         background-color: #165C7D;
         border: 1px solid #165C7D;
+        color: #FFF;
     }
 
     &.secondary {
