--- a/src/app/shared/components/stepper/stepper.component.html
+++ b/src/app/shared/components/stepper/stepper.component.html
@@ -1,1 +1,18 @@
-<p>stepper works!</p>
+<div class="stepper">
+    <div class="element">
+        <span class="step"></span>
+        <label for="Inicio">Início</label>
+    </div>
+    <div class="element">
+        <span class="step"></span>
+        <label for="Documentos">Documentos</label>
+    </div>
+    <div class="element">
+        <span class="step"></span>
+        <label for="Dados">Dados Cadastrais</label>
+    </div>
+    <div class="element">
+        <span class="step"></span>
+        <label for="Admissão">Admissão</label>
+    </div>
+</div>
