--- a/src/app/shared/template/sidenav/sidenav.component.html
+++ b/src/app/shared/template/sidenav/sidenav.component.html
@@ -13,6 +13,7 @@
 
     <section class="content">
         <app-header></app-header>
+        <app-stepper></app-stepper>
         <router-outlet></router-outlet>
     </section>
 </aside>
