--- a/src/app/admission/search-user/search-user.component.scss
+++ b/src/app/admission/search-user/search-user.component.scss
@@ -23,7 +23,7 @@
 
         .button {
             display: flex;
-            align-items: end;
+            align-items: flex-end;
         }
 
         input {
@@ -35,7 +35,7 @@
 
     .form {
         display: flex;
-        align-items: end;
+        align-items: flex-end;
     }
 
     .result {
