--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,6 @@
-<button [ngClass]="{'primary': setStyle, 'secondary': !setStyle}">
+<button
+ [ngClass]="{'primary': setStyle, 'secondary': !setStyle}"
+ [type]="typeButton"
+ >
     {{ title }}
 </button>
