--- a/src/app/shared/template/header/header.component.html
+++ b/src/app/shared/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z1">
+<header class="header">
     <section class="left">
         <h1>NOVA ADMISSÃO DE COOPERADO</h1>
         <p>Cadastro / Admissão do Cooperado / Nova Admissão de Cooperado</p>
@@ -7,4 +7,4 @@
     <section class="right">
         
     </section>
-</mat-toolbar>
+</header>
