--- a/src/app/admission/search-user/search-user.component.scss
+++ b/src/app/admission/search-user/search-user.component.scss
@@ -31,6 +31,10 @@
             font-size: 1em;
             margin-right: 2em;
         }
+        
+        .validation-error {
+            color: #FF0000;
+        }
     }
 
     .form {
@@ -47,4 +51,6 @@
             width: 25%;
         }
     }
+
+
 }
