--- a/src/app/shared/template/header/header.component.scss
+++ b/src/app/shared/template/header/header.component.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;  
     padding: 2.5em;
     background-color: #FFF;
+    box-shadow: 0px 0px 4px #555;
     
     h1 {
         font-weight: bold;
